Version 4.39 - 		      , by Per Øyvind Karlsen

- export rpmtag_from_string()

Version 4.38 - 19 October 2011, by Per Øyvind Karlsen

- fix api breakage with rpm 5.4

Version 4.37 - 24 July 2011, by Per Øyvind Karlsen

- fix URPM::Resolve::fullname_parts() to also work without disttag & distepoch

Version 4.36 -  6 July 2011, by Per Øyvind Karlsen

- document URPM::DB::convert() in API
- fix a segfault happening when URPM::DB::convert() is run without arguments
 
Version 4.35 -  5 July 2011, by Per Øyvind Karlsen

- fix a regression breaking promotion of dependencies on conflicts

Version 4.34 - 23 June 2011, by Per Øyvind Karlsen

- add a workaround for handling upgrade from older berkeley db versions which
  might not support new configuration in DB_CONFIG, causing it to break during
  upgrade
- add support for specifying tag name to match with URPM::Transaction->remove()
- add some regression tests for parsing disttag & distepoch from synthesis
- extract disttag & distepoch from new fields in @info@ of synthesis

Version 4.33 - 31 May 2011, by Per Øyvind Karlsen

- add disttag & distepoch to $state->{rejected} for assisting parsing of
  fullname with regex
- add URPM::Resolve::fullname_parts() as a function parsing fullname with a
  regex assisted by provided disttag & distepoch

Version 4.32 - 31 May 2011, by Per Øyvind Karlsen

- *really* fix URPM::Package->sourcerpm

Version 4.31 - 31 May 2011, by Per Øyvind Karlsen

- fix URPM::Package->sourcerpm returning summary in stead of source rpm
- fix slow matching of individual regexes for skipping dependencies by creating
  a large regex to match them all at once (#61389, patch contributed by
  Shlomi Fish \o/)

Version 4.30 - 12 May 2011, by Per Øyvind Karlsen

- fix Resolve.pm/_choose_required() breakage after DUDF merge, causing ie.
  'urpmq -d' to break (#63250, with big thanks to Funda\o/)

Version 4.29 -  7 May 2011, by Per Øyvind Karlsen

- fix segfault when trying to get EVR of a src.rpm from synthesis, as